<resources>
    <string name="app_name">Alert while Using Mobile Walk♪</string>
    <string name="app_googlePlay_url">https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_googlePlay_url_plusOne">https://market.android.com/details?id=%s</string>

    <string name="twitter_callback_url">junkuvo://twitter</string>

    <string name="twitter_tweetText">Alert while Using Mobile Walk♪</string>
    <string name="twitter_auth_succeed">Twitter Authentication Success!</string>
    <string name="twitter_auth_fail">Twitter Authentication Failure…</string>
    <string name="twitter_tweet_succeed">Tweet Complete!</string>
    <string name="twitter_tweet_fail">Tweet Failure…</string>
    <string name="twitter_tweet_step">STEP！</string>

    <string name="dialog_tweet">Tweet right now？</string>

    <string name="review_url">market://details?id=%s</string>
    <string name="review_url_title">Review</string>

    <string name="menu_title_setting">Configure</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_history">History</string>

    <string name="dialog_title_setting">Configure</string>
    <string name="dialog_title_tweet">Tweet</string>
    <string name="dialog_button_send">Send</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_title_history">Step Count History</string>
    <string name="dialog_title_history_nodata">No data found…</string>

    <string name="home_button_start">Start</string>
    <string name="home_button_stop">Stop</string>
    <string name="home_edittext_alert">Face Forward!</string>
    <string name="home_step_count_dimension">STEP</string>

    <string name="setting_header_weak">W</string>
    <string name="setting_header_strong">S</string>
    <string name="setting_header_alert">Message Alert：</string>
    <string name="setting_header_vibration">Vibration Alert：</string>

    <string name="setting_header_pedometer">Pedometer</string>
    <string name="pedometer_header_count">Step Count : </string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="prompt_title">Enjoying this app?</string>
    <string name="prompt_btn_no">No</string>
    <string name="prompt_btn_yes">Yes!</string>
    <string name="prompt_title_feedback">Awesome! We\'d love a Play Store review…</string>
    <string name="prompt_btn_notnow">Not right now</string>
    <string name="prompt_btn_sure">Sure thing!</string>
    <string name="setting_header_passcode">Passcode:</string>
    <string name="prompt_thanks">Thanks for your feedback!</string>
    <string name="prompt_title_feedback_2">Bummer. Would you like to send feedback?</string>
    <string name="intro_title">How to Use</string>
    <string name="intro_description">When you walk using mobile devices,\nThis app gives you Alert.\nPlease input a message and\nPush the Power button</string>
    <string name="dialog_passcode_title">Lock this button!</string>
    <string name="dialog_passcode_description">Input passcode to lock this button.</string>
    <string name="dialog_passcode_passcode">Passcode</string>
    <string name="dialog_passcode_confirm">Confirm Passcode</string>
    <string name="toast_instruction">Push this button now !</string>
    <string name="home_step_count_initial">0STEP</string>
    <string name="setting_toast_Top">Top</string>
    <string name="setting_header">Sensitivity</string>
    <string name="setting_toast_Center">Center</string>
    <string name="setting_toast_Bottom">Bottom</string>
    <string name="setting_toast_position">Message Position</string>
    <string name="home_text_watching">watching</string>
    <string name="app_used_thankyou">Thank you for using this app :)</string>

    <string name="app_explanation">ボタンをタップで歩きスマホ検知開始！</string>

    <string name="notification_ticker">歩きスマホ防止アプリ起動！</string>
    <string name="notification_content_text">アプリを開く際はタップしてください！</string>

    <string name="dialog_back_key_positive">終了</string>
    <string name="dialog_back_key_negative">戻る</string>
    <string name="dialog_back_key_message">アプリを終了しますか？\n歩きスマホが検知できなくなります</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_abstract">AbstractActivity</string>
</resources>
