<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/rtlMain"
    android:foreground="?android:attr/selectableItemBackground"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text_watching"
        android:id="@+id/txtWatching"
        android:layout_above="@+id/txtAlertMessage"
        android:layout_marginBottom="16dp"
        android:textSize="32sp"
        android:visibility="gone"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAlertMessage"
        android:text="@string/home_edittext_alert"
        android:layout_above="@+id/flStart"
        android:layout_centerHorizontal="true"
        android:inputType="text" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <com.software.shell.fab.ActionButton
            android:id="@+id/fabStart"
            style="@style/fab_action_button_style"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            fab:type="BIG" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/start"
            android:textSize="20sp"
            tools:text="開始" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_explanation"
        android:id="@+id/txtExplanation"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/flStart"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/llStepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtExplanation"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home_step_count_initial"
            android:id="@+id/txtStepNo"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home_step_count_initial"
            android:id="@+id/txtStepCount"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="@dimen/basic_margin_48dp"
            android:textSize="40sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1630604043812019/9847037818" />

    <com.github.stkent.amplify.prompt.DefaultLayoutPromptView
        android:id="@+id/prompt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:prompt_view_thanks_display_time_ms="2000"
        app:prompt_view_button_corner_radius="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/llStepCount">

        <com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
            android:id="@+id/plus_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            plus:size="medium"
            plus:annotation="bubble"
            android:visibility="gone" />

        <com.facebook.share.widget.LikeView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/like_view" />
    </LinearLayout>
</RelativeLayout>
